--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express-validator": "^6.5.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.19",
-    "request": "^2.88.2"
+    "react-moment": "^0.9.7",
+    "request": "^2.88.2",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
